@@ -7,4 +7,4 @@ lib_LTLIBRARIES = libwzd_perl.la
 
 libwzd_perl_la_SOURCES = libwzd_perl.c
 libwzd_perl_la_LIBADD = ../../src/libwzd_core.la
-libwzd_perl_la_LDFLAGS = -no-undefined -avoid-version -module $(WZD_PERL_LIBS)
+libwzd_perl_la_LDFLAGS = -no-undefined -avoid-version -module $(WZD_PERL_LIBS) $(WZD_SSL_LIBS) @CRYPT_FLAGS@ @PTHREAD_CFLAGS@ @PTHREAD_LIBS@
